--- a/docs/UML/classes/work_plan.adoc
+++ b/docs/UML/classes/work_plan.adoc
@@ -27,7 +27,7 @@ It is currently assumed that there is no reliable machine identifier system for 
 
 h|*1..1*
 |*plans*: `List<UID_BASED_ID>`
-a|The set of all Task Plans use in this Work Plan. In general, only some of these are top-level Plans.
+a|References to all Task Plans use in this Work Plan. In general, only some of these are top-level Plans.
 
 h|*0..1*
 |*care_plan*: `LOCATABLE_REF`
@@ -54,7 +54,7 @@ h|*0..1*
 a|Reference list of all defined Event Listeners.
 
 h|*0..1*
-|*top_level_plans*: `List<UID_BASED_ID>`
+|*top_level_plans*: `List<TASK_PLAN>`
 a|The set of top-level Plans that correspond to the performers and work pathways of this Work Plan.
 
 h|*0..1*
